# libral

./: .travis.yml  .travis_target.sh  CMakeLists.txt  Dockerfile  Dockerfile.withdocker  HACKING.md  README.md  appveyor.yml  config.hpp.in
cgo_experiment/hosts_resource/: Makefile  wrapper.cpp
cmake/: FindAugeas.cmake
contrib/: bash_completion.sh  statpack  travis.sh
contrib/docker/: Dockerfile.alpine  Dockerfile.el6-build-static  Dockerfile.el6-build-static-go  Dockerfile.f25  Dockerfile.f25-build  Makefile  README.md  build.sh  el6-build-static.sh
contrib/docker/scripts/: build.sh  build_go_example.sh  check-static-libs.rb  image.sh  install_go.sh  pack_go_example.sh  pl-cmake  puppet-agent-tools.sh
contrib/puppet/: Dockerfile  README.md  puppet.prov
contrib/puppet/apt_libral/lib/puppet/provider/apt_libral/: ralsh.rb  simple.rb
contrib/puppet/apt_libral/lib/puppet/type/: apt_libral.rb
data/lenses/: README.source  mount_fstab.aug
data/lenses/tests/: test_mount_fstab.aug
data/mrblib/: ral_check.rb
data/providers/: apt.prov  apt.yaml  dnf.prov  dnf.yaml  dnf_provider.py  ssh_authorized_key.prov  ssh_authorized_key.yaml  systemd.prov  systemd.yaml  sysv.prov  upstart.prov  yum.prov  yum.yaml
data/providers/tests/: ssh_authorized_key.rb
doc/: Doxyfile.in  attributes.md  invoke-json.md  invoke-native.md  invoke-simple.md  metadata.md  ralsh-json-output.md
examples/: dpack  simple.prov
examples/go/: listproviders.go
examples/providers/: dpkg.prov  metadata.yaml  mruby.prov  python.prov  simple.prov
exe/: CMakeLists.txt  mirb.c  mruby.c  ral-check.cc  ralsh.cc
go_wrapper/: CMakeLists.txt  libral.go  libral_test.go  wrapper.cpp
go_wrapper/inventory_client/: inventory_client.go
go_wrapper/libral_test/: test.go
go_wrapper/types/: types.go
lib/: CMakeLists.txt
lib/inc/libral/: augeas.hpp  cast.hpp  command.hpp  context.hpp  cwrapper.hpp  environment.hpp  file.hpp  group.hpp  host.hpp  json_provider.hpp  libral.hpp  mount.hpp  mruby.hpp  provider.hpp  ral.hpp  resource.hpp  result.hpp  simple_provider.hpp  target.hpp  type.hpp  user.hpp  value.hpp
lib/inc/libral/attr/: spec.hpp
lib/inc/libral/augeas/: handle.hpp  node.hpp
lib/inc/libral/emitter/: emitter.hpp  json_emitter.hpp  puppet_emitter.hpp  quiet_emitter.hpp
lib/inc/libral/prov/: spec.hpp
lib/src/: augeas.cc  command.cc  context.cc  cwrapper.cc  environment.cc  file.cc  file.yaml  group.cc  group.yaml  host.cc  host.yaml  json_provider.cc  libral.cc  mount.cc  mount.yaml  provider.cc  ral.cc  resource.cc  simple_provider.cc  target.cc  type.cc  user.cc  user.yaml  value.cc
lib/src/attr/: spec.cc
lib/src/augeas/: handle.cc  node.cc
lib/src/emitter/: json_emitter.cc  puppet_emitter.cc
lib/src/prov/: spec.cc
lib/tests/: CMakeLists.txt  file.cc  fixtures.cc  fixtures.hpp  fixtures.hpp.in  json_provider.cc  libral.cc  main.cc
lib/tests/attr/: spec.cc
lib/tests/data/providers/: json.prov
libralgo/: libral.go  libral_test.go
libralgo/types/: types.go
mruby/: CMakeLists.txt  build_config.rb  build_config.rb.in  build_setup.rb.in  libral.gembox
mruby/mruby-libral/: README.md  mrbgem.rake
mruby/mruby-libral/mrblib/: augeas.rb  ral.rb
mruby/mruby-libral/mrblib/augeas/: builder.rb  node.rb
mruby/mruby-libral/mrblib/ral/: cli.rb  context.rb  update.rb
ruby/: CMakeLists.txt  Gemfile  README.md  Rakefile  Rakefile.in  libral.gemspec
ruby/ext/libral/: extconf.rb  extconf.rb.in  extconf_bounce.rb  libral.cc  libral.h
ruby/lib/: libral.rb
ruby/lib/libral/: change.rb  resource.rb  update.rb  version.rb
ruby/test/: libral_test.rb  test_helper.rb
